# Meadow-Agent

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  elderly_ai_assistant_plan_openai_api_first.md  render.yaml
backend/: pyproject.toml
backend/app/: __init__.py  dependencies.py  main.py  settings.py
backend/app/api/: dev_config.py  emotion.py  location.py  realtime.py  tools.py
backend/app/providers/: __init__.py  base.py  mock_grocery.py
backend/app/services/: __init__.py  confirmation_service.py  grocery_service.py  openai_realtime.py  profile_service.py  runtime_secrets.py  safety_policy.py
backend/tests/: conftest.py  test_api_flow.py  test_confirmation.py  test_dev_config.py  test_location.py  test_mock_grocery.py  test_openai_realtime_config.py  test_openai_realtime_live.py  test_safety_policy.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  styles.css
web/src/api/: client.ts  devConfig.ts  emotion.ts  grocery.ts  location.ts
web/src/components/: CancelOrderDialog.tsx  ConfigSidebar.tsx  ConfirmDialog.tsx  EmotionBadge.tsx  GroceryOptionCards.tsx  GroceryStageTracker.tsx  OrderHistoryDialog.tsx  TranscriptPanel.tsx  VoiceButton.tsx
web/src/emotion/: emotionClassifier.ts  faceLandmarker.ts  smoothing.ts
web/src/realtime/: eventHandlers.ts  startRealtimeSession.ts  toolBridge.ts
web/src/store/: useEmotionStore.ts  useGroceryStore.ts  useVoiceStore.ts
web/src/user/: sessionUser.ts
